<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.soojison.andwallet.SummaryActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbarSummary">
    </include>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/walletIcon"
        android:layout_below="@+id/toolbarSummary"
        android:src="@drawable/ic_account_balance_wallet"
        android:contentDescription="@string/wallet_icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvAppName"
        android:text="@string/app_name"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="36dp"
        android:textSize="36sp"
        android:layout_below="@+id/walletIcon"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_there"
        android:layout_below="@+id/tvAppName"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/here_you_can_view_your_current_balance_based_on_your_income_and_expenditures"
        android:id="@+id/tvDescription"
        android:layout_below="@id/tvGreeting"
        android:textAlignment="center"
        android:textSize="16sp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layoutAmount"
        android:layout_below="@+id/tvDescription"
        android:layout_margin="16dp"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textAlignment="center"
            android:id="@+id/tvIncome"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus_sign"
            android:textAlignment="center"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textAlignment="center"
            android:id="@+id/tvExpenses"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutAmount"
        android:textSize="24sp"
        android:padding="16dp"
        android:textAlignment="center"
        android:id="@+id/tvBalanceSum"/>


</RelativeLayout>
